[package]
name = "josekit"
version = "0.10.3"
description = "JOSE (Javascript Object Signing and Encryption) library for Rust."
repository = "https://github.com/hidekatsu-izuno/josekit-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Hidekatsu Izuno <hidekatsu.izuno@gmail.com>"]
keywords = ["jose", "jwt", "jws", "jwe", "jwa"]
categories = ["authentication"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["openssl"]
default = ["rustcrypto"]
vendored = ["openssl/vendored"]
rustcrypto = [
    "aes",
    "aes-gcm",
    "aes-kw",
    "cbc",
    "p256",
    "p384",
    "p521",
    "k256",
    "ed25519-dalek",
    "x25519-dalek",
    "cx448",
    "sha2",
    "sha1",
    "pbkdf2",
    "rsa",
    "hmac",
]

[dependencies]
x25519-dalek = { version = "2.0.1", features = [
    "static_secrets",
], optional = true }
cx448 = { version = "0.1.1", features = ["pkcs8"], optional = true }
thiserror = "2"
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"
flate2 = "1"
time = "0.3"
openssl = { version = "0.10.68", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
aes-kw = { version = "0.2.1", optional = true }
p256 = { version = "0.13.2", features = [
    "pkcs8",
    "jwk",
    "ecdh",
    "ecdsa",
], optional = true }
p384 = { version = "0.13.1", features = [
    "pkcs8",
    "jwk",
    "ecdh",
    "ecdsa",
], optional = true }
p521 = { version = "0.13.3", features = [
    "pkcs8",
    "jwk",
    "ecdh",
    "ecdsa",
], optional = true }
k256 = { version = "0.13.4", features = [
    "jwk",
    "ecdh",
    "ecdsa",
], optional = true }
sha2 = { version = "0.10.9", optional = true }
sha1 = { version = "0.10.6", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
rsa = { version = "0.9.8", optional = true, features = [
    "pkcs5",
    "sha2",
    "sha1",
] }
cbc = { version = "0.1.2", features = ["alloc"], optional = true }
aes = { version = "0.8.4", optional = true }
hmac = { version = "0.12.1", optional = true }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "digest",
], optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
